--- a/Caso2-Infracomp/.project
+++ b/Caso2-Infracomp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Caso2</name>
+	<name>Caso2-Infracomp</name>
 	<comment></comment>
 	<projects>
 	</projects>
